add shutdown handler; formatting, move destructive stuff to settings page, fix prev_level

--- a/style/main.scss
+++ b/style/main.scss
@@ -87,6 +87,20 @@ a:hover {
 }
 
 .close-button {
-  float: right;
+  position: absolute;
+  top: 0;
+  right: 0%;
+  padding: 10px;
+}
 
+.settings-button {
+  position: absolute;
+  top: 0;
+  left: 0%;
+  padding: 10px;
+}
+
+.title {
+  text-align: center;
+  font-size: 30px;
 }
